# second-brain-plugins

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
docs/demos/: karpathy-llm-wiki.tape
docs/demos/screenshots/: README.md  example-stats-dashboard.md
docs/superpowers/plans/: 2026-06-22-llm-wiki-to-notion.md
docs/superpowers/specs/: 2026-06-22-llm-wiki-to-notion-design.md
plugins/karpathy-llm-wiki/: CHANGELOG.md  README.md  demo.tape
plugins/karpathy-llm-wiki/.claude-plugin/: plugin.json
plugins/karpathy-llm-wiki/agents/: compile-agent.md  gap-researcher.md  quality-reviewer.md  wiki-health.md  wikilink-agent.md
plugins/karpathy-llm-wiki/commands/: kb-compile.md  kb-health.md  kb-index.md  kb-ingest-tool.md  kb-ingest.md  kb-init.md  kb-lint.md  kb-push-notion.md  kb-query.md  kb-test.md
plugins/karpathy-llm-wiki/docs/: using-with-obsidian.md
plugins/karpathy-llm-wiki/docs/plans/: 2026-06-22-tool-ingestion.md
plugins/karpathy-llm-wiki/docs/specs/: 2026-06-22-github-tool-ingestion-design.md
plugins/karpathy-llm-wiki/hooks/: hooks.json
plugins/karpathy-llm-wiki/hooks/scripts/: lint-and-index.sh
plugins/karpathy-llm-wiki/llm-wiki-core/: .pre-commit-config.yaml  Makefile  pyproject.toml
plugins/karpathy-llm-wiki/llm-wiki-core/src/llm_wiki/: __init__.py  cli.py
plugins/karpathy-llm-wiki/llm-wiki-core/src/llm_wiki/commands/: __init__.py  charts.py  compile_cmd.py  export_notion.py  index.py  ingest.py  ingest_tool.py  init_cmd.py  lint.py  migrate_frontmatter.py  search.py
plugins/karpathy-llm-wiki/llm-wiki-core/src/llm_wiki/core/: __init__.py  config.py  dedup.py  embeddings.py  frontmatter.py  github.py  html_extract.py  pdf_text.py  tags.py  taxonomy.py  text.py
plugins/karpathy-llm-wiki/llm-wiki-core/src/llm_wiki/templates/: gitignore  kb-config.yml  tag-taxonomy.md
plugins/karpathy-llm-wiki/llm-wiki-core/tests/: conftest.py  test_cli.py  test_compile.py  test_config.py  test_dedup.py  test_export_notion.py  test_frontmatter.py  test_github.py  test_html_extract.py  test_index.py  test_ingest.py  test_ingest_tool.py  test_init.py  test_lint.py  test_maintenance.py  test_migrate_frontmatter.py  test_pdf_text.py  test_search.py  test_tags.py  test_text.py
plugins/karpathy-llm-wiki/skills/: compile-note.md  compile-tool.md  gap-analysis.md  lint-and-repair.md  search-and-link.md
plugins/karpathy-llm-wiki/workflows/: README.md  compile-inbox-batch.js  ingest-notion-cited-sources.js  ingest-pdfs.js  ingest-tools.js  push-to-notion.js
