[project]
name = "karpathy-llm-wiki"
version = "0.2.0"
description = "Karpathy-style personal knowledge wiki — CLI for ingesting, compiling, searching, and maintaining a semantic knowledge base"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.20",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
pdf = ["marker-pdf>=1.0"]

[project.scripts]
kb = "llm_wiki.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=llm_wiki --cov-report=term-missing --timeout=30"
filterwarnings = [
    "ignore::DeprecationWarning:hypothesis.*",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "W", "C90", "SIM", "PIE", "PLR", "RET",
    "ANN", "UP", "D", "N", "S", "BLE", "A", "COM", "C4", "DTZ",
    "T10", "EM", "ISC", "ICN", "G", "INP", "PT", "Q", "RSE",
    "SLOT", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL",
    "TRY", "FLY", "PERF", "RUF",
]
ignore = ["E203", "E501", "D100", "D104", "COM812", "ISC001", "INP001", "RUF003", "RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["llm_wiki"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "S603", "S607", "D101", "D102", "D103", "ANN", "PLR2004", "ARG001", "PLR0913", "ARG002", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["lancedb.*", "sentence_transformers.*", "matplotlib.*", "pyarrow.*", "pandas.*", "marker.*", "yaml"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["llm_wiki"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
test = "pytest --cov-report=xml:coverage.xml"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "taskipy",
    "vulture>=2.14",
]
